Add error message for search

--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,7 @@
                     <span id='tooltipClick2'
                           title='The word network requires a word to be searched. With Network graph you can visualize most common words that are concurrently used with word of choice. It can be intereacted with via drag. The size of the nodes is proportional to the number of tweets that word and the word you searched for have in common.'>
                   <i class="fa fa-info-circle" aria-hidden="true" style="font-size:18px"></i>
+                    &nbsp;<span id="no-result-network"></span>
               </span>
                 </form>
                 <script src="sliders.js"></script>
@@ -192,6 +193,7 @@
                     <span id='tooltipClick3'
                           title='The Twitter Scatter plots scatter of each tweet in filtered data as a node (axis of choice used). It also provides tooltips that allow you to highlight specific tweets from the plot. Additionally, you can use the search box to search for one or more words in the dataset.'>
                   <i class="fa fa-info-circle" aria-hidden="true" style="font-size:18px"></i>
+                  &nbsp;<span id="no-result-scatter"></span>
               </span>
                 </form>
                 <div id="scatter-container"></div>
