Fix stack order of elements

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <ol>
                 <li>Make sure that you are using Google Chrome for the best experience!</li>
                 <li>Select politicians of interest to focus on.</li>
-                <li>Select the sentiments that you prefer to include. Each tweet in the dataset has been analyzed using the VADER sentiment analysis tool and has been classified into one of the five sentiment categories (see below).</li>
+                <li>Select the sentiments that you prefer to include. Each tweet in the dataset has been analyzed using the VADER social media sentiment analysis tool and has been classified into one of the five sentiment categories (see below).</li>
                 <li>Select an election period and a range of dates.</li>
                 <li>Press submit. If the filtering was successful, you will see a green text block verifying your filters.</li>
                 <li>Then you can play around with the word network, the twitter scatterplot and the summary statistics!</li>
