Change tab colors when selected

--- a/src/index.html
+++ b/src/index.html
@@ -251,7 +251,9 @@
         </div>
       <div id="pieChart"></div>
       <div id="option">
-        <input type="button" id="clear" value="Reset"/>
+          <b>Summary Statistics</b>
+          &nbsp;&nbsp;
+          <input type="button" id="clear" value="Reset"/>
           <span id='tooltipClick4'
                 title="The following visualizations give additional views to the dataset. It shows you a donut chart to see how much the politicians you selected tweet compared to others (hover over a slice to view the politician's percentage). It also shows the overall sentiment and interaction distribution. You can also drill down on a certain politician and you can see their respective distributions. Additionally, we show you the top 10 tweets from the filtered dataset, in which you can actively interact with.">
                   <i class="fa fa-info-circle" aria-hidden="true" style="font-size:18px"></i>
