Add error message for multi-word inputs

--- a/src/index.html
+++ b/src/index.html
@@ -170,7 +170,7 @@
                     <input type="text" id="network-input" placeholder="Enter a keyword...">
                     <input type="submit" id="network-submit" value="Search" >
                     <span id='tooltipClick2'
-                          title='The word network requires a word to be searched. With Network graph you can visualize the most common words that are concurrently used with the word of choice. It can be intereacted with via drag. The size of the nodes is proportional to the number of tweets that word and the word you searched for have in common.'>
+                          title='The word network requires a word to be searched. With Network graph you can visualize the most common words that are concurrently used with the word of choice. It can be interacted with via drag. The size of the nodes is proportional to the number of tweets that word and the word you searched for have in common.'>
                   <i class="fa fa-info-circle" aria-hidden="true" style="font-size:18px"></i>
                     &nbsp;<span id="no-result-network"></span>
               </span>
