--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
           learn more about the role of Twitter in the American politics scene.
           Social media posts from notable U.S. politicians were scraped from Twitter and information from these tweets can be explored
           in various ways on this page using data visualization.</h4>
-        <button class="accordion">How To Use</button>
+        <button class="accordion"><h3>How To Use</h3></button>
         <div class="panel">
             <ol>
                 <li>Make sure that you are using Google Chrome for the best experience!</li>
@@ -27,13 +27,13 @@
                 <li>Then you can play around with the word network, the twitter scatterplot and the summary statistics!</li>
             </ol>
         </div>
-      <br><br>
+      <br>
       <form id="main-form">
-          <h3>&nbsp;&nbsp;Tweet Filtering </h3>
+          <h3>&nbsp;&nbsp;&nbsp;Tweet Filtering </h3>
           <div id="tweetfilteringinfo" style="display: inline;">
               <span id='tooltipClick'
                     title='The tweet filtering allows filtering of tweets to a get specific subset of data of interest. Some defaults have been pre-selected below as an example. However, you are free to change these or select other filtering options of interest.'>
-                  <i class="fa fa-info-circle" aria-hidden="true" style="font-size:18px"></i>
+                  <i class="fa fa-info-circle" aria-hidden="true" style="font-size:18px; position:fixed;"></i>
               </span>
           </div>
           <!-- Democrat/Republican selection -->
