Radio button change

--- a/src/index.html
+++ b/src/index.html
@@ -203,7 +203,7 @@
             <section role="tabpanel" id="page2">
                 <!-- Scatterplot search -->
                 <form id="scatter-form">
-                  &nbsp;&nbsp;Please select a Y-dimension before searching:
+                  &nbsp;&nbsp;Please select a Y-dimension:
                   <input type="radio" class="y-axis" id="fav" name="y-axis" value="favorites" required checked>
                   <label for="fav"># of Favorites</label>
                   <input type="radio" class="y-axis" id="rt" name="y-axis" value="retweets">
