Update info tooltip

--- a/src/index.html
+++ b/src/index.html
@@ -213,7 +213,7 @@
                   <input type="text" id="scatter-input" placeholder="Enter a keyword...">
                   <input type="submit" id="scatter-submit" value="Search" >
                     <span id='tooltipClick3'
-                          title='The Twitter Scatter plots a graph of each tweet in the filtered data as a node (using a selected Y-dimension over time). The Y-axis values are displayed so that users may be able to easily see and interact with the entire distribution of tweets. It also provides tooltips that allow you to highlight specific tweets from the plot. Additionally, you can use the search box to search for one or more words in the dataset. Use mouse and/or trackpad to zoom and pan on the graph. Note: there may be some lag in the zoom when many data points are selected and displayed.'>
+                          title='The Twitter Scatter plots a graph of each tweet in the filtered data as a node (using a selected Y-dimension over time). The Y-axis values are displayed so that users may be able to easily see and interact with the entire distribution of tweets. It also provides tooltips that allow you to highlight specific tweets from the plot. Additionally, you can use the search box to search for one or more words in the dataset.'>
                   <i class="fa fa-info-circle" aria-hidden="true" style="font-size:18px"></i>
                   &nbsp;<span id="no-result-scatter"></span>
               </span>
